[tool.poetry]
name = "Meraxes docs"
version = "1.0.0-alpha"
description = "Documentation for the Meraxes semi-analytic galaxy formation model"
authors = ["Simon Mutch <smutch@unimelb.edu.au>"]
license = ""

[tool.poetry.dependencies]
python = "^3.9"
Sphinx = "^4.4.0"
breathe = "^4.33.1"
sphinx-press-theme = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
